--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -10,11 +10,14 @@ import Marquee from "@/components/landing/Marquee.astro";
     <div class="bg-grid p-8 relative">
       <Text
         tag="h1"
-        variant="display3XL"
+        variant="display6XL"
         class="text-white tracking-tighter font-black uppercase relative"
       >
-        Maximize your online presence with a unique and engaging one-page
-        website that delivers outstanding results.
+        Swipe.
+        <br />
+        Decide.
+        <br />
+        Move on.
       </Text>
     </div>
     <Marquee />
