--- a/src/components/assets/Logo.astro
+++ b/src/components/assets/Logo.astro
@@ -2,4 +2,4 @@
 const { class: className = "", ...rest } = Astro.props;
 ---
 
-<span class={className} {...rest}>AstroMax SP</span>
+<span class={className} {...rest}>Swipe . Photo</span>
