--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -3,11 +3,8 @@ import Logo from "@/components/assets/Logo.astro";
 import Button from "@/components/fundations/elements/Button.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 const links = [
-  { label: "Work", href: "/work" },
   { label: "Blog", href: "/blog" },
-  { label: "Store", href: "/store" },
   { label: "Team", href: "/team" },
-  { label: "Overview", href: "/system/overview" },
 ];
 ---
 
@@ -44,7 +41,7 @@ const links = [
           size="xs"
           class="rounded-full"
         >
-          Buy AstroMax SP
+          Download Swipe
         </Button>
       </div>
       <!-- Mobile Menu Button -->
