--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -10,9 +10,7 @@ const links = [
   {
     title: "Explore",
     items: [
-      { label: "Work", href: "/work" },
       { label: "Blog", href: "/blog" },
-      { label: "Store", href: "/store" },
       { label: "Team", href: "/team" },
     ],
   },
@@ -44,8 +42,7 @@ const links = [
             variant="textSM"
             class="text-white/60 max-w-sm text-balance"
           >
-            AstroMax is a creative agency building digital experiences that
-            matter.
+            Swipe.Photo is a really sweet app that is real. This site is largely satire. 
           </Text>
         </div>
         <div class="flex flex-wrap gap-12 lg:gap-24">
@@ -84,7 +81,16 @@ const links = [
         variant="textSM"
         class="text-secondary-400 uppercase font-medium"
       >
-        © {new Date().getFullYear()} AstroMax. All rights reserved.
+        © {new Date().getFullYear()}{" "}
+        <a
+          href="https://starterbuild.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-accent-500 hover:underline transition-all duration-200"
+        >
+          StarterBuild
+        </a>
+        . All rights reserved.
       </Text>
       
     </div>
