--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -37,7 +37,7 @@ import BgGrid from "@/components/assets/BgGrid.astro";
         variant="displayMD"
         class="font-black text-white uppercase"
       >
-        Designed and developed websites at AstroMax
+       UNEXPECTEDLY THERAPEUTIC
       </Text>
     </div>
     <div class="relative">
