--- a/src/components/landing/Cta.astro
+++ b/src/components/landing/Cta.astro
@@ -7,9 +7,9 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 <Wrapper variant="standard">
   <div class="bg-transparent duration-200 group hover:bg-accent-500">
     <a
-      href="mailto:michael@andreuzza.com"
+      href="https://starterbuild.com"
       class="text-white text-center items-center uppercase font-black w-full bg-accent-500 duration-500 ease-in-out focus:outline-disc focus:ring-0 hover:rounded-none inline-flex justify-center lg:py-24 lg:text-7xl px-4 py-6 rounded-[200px] text-4xl transition-all"
-      >Get a quote</a
+      >Download</a
     >
   </div>
 </Wrapper>
