--- a/src/components/fundations/head/Seo.astro
+++ b/src/components/fundations/head/Seo.astro
@@ -3,13 +3,13 @@ import { AstroSeo } from "@astrolib/seo";
 ---
 
 <AstroSeo
-  title="Your Page Title"
-  description="A detailed description of your page content."
-  canonical="https://yourwebsite.com/current-page"
+  title="Swipe.Photo – Clean and Declutter Your iPhone Photos Fast"
+  description="Swipe.Photo helps you quickly clean and declutter your iPhone camera roll by swiping to keep what matters and delete what doesn’t."
+  canonical="https:swipe.photo"
   openGraph={{
-    url: "https://yourwebsite.com/current-page",
-    title: "Your Page Title",
-    description: "A detailed description of your page content.",
+    url: "https://swipe.photo",
+    title: "Swipe.Photo – Clean and Declutter Your iPhone Photos Fast",
+    description: "Swipe.Photo helps you quickly clean and declutter your iPhone camera roll by swiping to keep what matters and delete what doesn’t.",
     images: [
       {
         url: "https://yourwebsite.com/og-image.jpg",
@@ -19,7 +19,7 @@ import { AstroSeo } from "@astrolib/seo";
         type: "image/jpeg",
       },
     ],
-    site_name: "Your Site Name",
+    site_name: "Swipe.Photo",
     type: "website",
     locale: "en_US",
   }}
