--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -42,7 +42,9 @@ const links = [
             variant="textSM"
             class="text-white/60 max-w-sm text-balance"
           >
-            Swipe.Photo is a really sweet app that is real. This site is largely satire. 
+            Swipe.Photo is a real app. 
+            <br />
+            This website is largely satire. 
           </Text>
         </div>
         <div class="flex flex-wrap gap-12 lg:gap-24">
