--- a/src/components/assets/Logo.astro
+++ b/src/components/assets/Logo.astro
@@ -1,8 +1,14 @@
 ---
-const { class: className = "", ...rest } = Astro.props;
+import logoImage from "@/images/site/sp-logo.png";
+
+const { class: className = "", size = "1.4em", ...rest } = Astro.props;
 ---
 
 <span class={className} {...rest}>
-  <span style="margin-right: 0.3em; font-size: 1.4em;">📸</span>
+  <img
+    src={logoImage.src}
+    alt="Swipe.Photo logo"
+    style={`margin-right: 0.3em; height: ${size}; width: auto; display: inline-block; vertical-align: middle;`}
+  />
   Swipe . Photo
 </span>
