--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -1,18 +1,18 @@
 ---
 // Assets
 import { Image } from "astro:assets";
-import Aelen from "@/images/work/aelen.png";
-import Author from "@/images/work/author.png";
-import Dusk from "@/images/work/dusk.png";
-import Ellamae from "@/images/work/ellamae.png";
-import Molle from "@/images/work/molle.png";
-import Semplice from "@/images/work/semplice.png";
-import Streamer from "@/images/work/streamer.png";
+import Aelen from "@/images/work/sky.png";
+import Author from "@/images/work/knight.png";
+import Dusk from "@/images/work/bill.png";
+import Ellamae from "@/images/work/cow.jpeg";
+import Molle from "@/images/work/dog.png";
+import Semplice from "@/images/work/girl.png";
+import Streamer from "@/images/work/seattle.png";
 const themes = [
-  { name: "Aelen", image: Aelen },
-  { name: "Author", image: Author },
   { name: "Dusk", image: Dusk },
+  { name: "Aelen", image: Aelen },
   { name: "Ellamae", image: Ellamae },
+  { name: "Author", image: Author },
   { name: "Molle", image: Molle },
   { name: "Semplice", image: Semplice },
   { name: "Streamer", image: Streamer },
