button on mobile

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -72,12 +72,12 @@ const links = [
         <div class="pt-4 w-full max-w-xs">
           <Button
             isLink
-            href="/system/overview"
+            href="https:starterbuild.com"
             variant="default"
             size="md"
             class="rounded-full w-full justify-center"
           >
-            System
+            Download Swipe
           </Button>
         </div>
       </nav>
