--- a/src/components/landing/Intro.astro
+++ b/src/components/landing/Intro.astro
@@ -21,7 +21,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       Our phones quietly collect years of moments, screenshots, and memories we never meant to keep. 
       <br />
       <br />
-      Turn clutter into clarity. Create space for what actually matters.
+      Time to create space for what actually matters.
       </Text>
     </div>
   </Wrapper>
