--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "@/components/landing/Hero.astro";
 import Testimonials from "@/components/landing/Testimonials.astro";
 import Work from "@/components/landing/Work.astro";
 import Intro from "@/components/landing/Intro.astro";
+import Download from "@/components/landing/Download.astro";
 import Services from "@/components/landing/Services.astro";
 import Cta from "@/components/landing/Cta.astro";
 ---
@@ -11,8 +12,10 @@ import Cta from "@/components/landing/Cta.astro";
 <BaseLayout>
   <Hero />
   <Testimonials />
+  <Download />
   <Work />
   <Intro />
+  <Download />
   <Services />
   <Cta />
 </BaseLayout>
