--- a/src/components/fundations/head/BaseHead.astro
+++ b/src/components/fundations/head/BaseHead.astro
@@ -7,11 +7,19 @@ import Favicons from "@/components/fundations/head/Favicons.astro";
 import FuseJS from "@/components/fundations/scripts/FuseJS.astro";
 import KeenSlider from "@/components/fundations/scripts/KeenSlider.astro";
 
+const { title, description, canonical, ogImage, noindex } = Astro.props;
 ---
-<Seo />
+
+<Seo
+  title={title}
+  description={description}
+  canonical={canonical}
+  ogImage={ogImage}
+  noindex={noindex}
+/>
 <Meta />
 <Fonts />
 <Favicons />
 <!-- Scripts -->
-<FuseJS/>
+<FuseJS />
 <KeenSlider />
