--- a/src/layouts/StoreLayout.astro
+++ b/src/layouts/StoreLayout.astro
@@ -30,7 +30,11 @@ const gallery = frontmatter.gallery ?? [];
 const tags = frontmatter.tags ?? [];
 ---
 
-<BaseLayout>
+<BaseLayout
+  title={frontmatter.title}
+  description={frontmatter.description}
+  ogImage={frontmatter.image.url.src}
+>
   <section>
     <Wrapper variant="standard" class="border-b">
       <div class="p-8 relative bg-grid">
