--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import Services from "@/components/landing/Services.astro";
 import Cta from "@/components/landing/Cta.astro";
 ---
 
-<BaseLayout>
+<BaseLayout
+  title="Swipe.Photo – Clean and Declutter Your iPhone Photos Fast"
+  description="Swipe.Photo helps you quickly clean and declutter your iPhone camera roll by swiping to keep what matters and delete what doesn’t."
+>
   <Hero />
   <Testimonials />
   <Download />
