--- a/src/pages/team/index.astro
+++ b/src/pages/team/index.astro
@@ -15,7 +15,10 @@ const sortedAuthors = allAuthors.toSorted((a, b) => {
 });
 ---
 
-<BaseLayout>
+<BaseLayout
+  title="Meet the Team | Swipe.Photo"
+  description="The passionate individuals building Swipe.Photo to help you reclaim your phone storage."
+>
   <section>
     <Wrapper variant="standard">
       <div class="p-8 bg-grid">
