structured data for blogs

--- a/src/components/fundations/head/BaseHead.astro
+++ b/src/components/fundations/head/BaseHead.astro
@@ -7,7 +7,7 @@ import Favicons from "@/components/fundations/head/Favicons.astro";
 import FuseJS from "@/components/fundations/scripts/FuseJS.astro";
 import KeenSlider from "@/components/fundations/scripts/KeenSlider.astro";
 
-const { title, description, canonical, ogImage, noindex } = Astro.props;
+const { title, description, canonical, ogImage, noindex, structuredData } = Astro.props;
 ---
 
 <Seo
@@ -17,6 +17,9 @@ const { title, description, canonical, ogImage, noindex } = Astro.props;
   ogImage={ogImage}
   noindex={noindex}
 />
+{structuredData && (
+  <script type="application/ld+json" set:html={JSON.stringify(structuredData)} />
+)}
 <Meta />
 <Fonts />
 <Favicons />
