--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const {
   canonical,
   ogImage,
   noindex,
+  structuredData,
 } = Astro.props;
 ---
 
@@ -28,6 +29,7 @@ const {
       canonical={canonical}
       ogImage={ogImage}
       noindex={noindex}
+      structuredData={structuredData}
     />
   </head>
   <body class="flex flex-col bg-base-950">
